--- a/apps/homepage/.netlify/server/.vite/manifest.json
+++ b/apps/homepage/.netlify/server/.vite/manifest.json
@@ -28,11 +28,11 @@
     ],
     "css": [
       "_app/immutable/assets/Detail.Dp-hJ7HF.css",
-      "_app/immutable/assets/Footer.5IfJ6qmx.css"
+      "_app/immutable/assets/Footer.B876gk1A.css"
     ]
   },
   "_Footer.svelte_svelte_type_style_lang.js": {
-    "file": "_app/immutable/assets/Footer.5IfJ6qmx.css",
+    "file": "_app/immutable/assets/Footer.B876gk1A.css",
     "src": "_Footer.svelte_svelte_type_style_lang.js"
   },
   "_TitleBlock.js": {
@@ -44,7 +44,7 @@
     ],
     "css": [
       "_app/immutable/assets/TitleBlock.BUY42zGz.css",
-      "_app/immutable/assets/Footer.5IfJ6qmx.css"
+      "_app/immutable/assets/Footer.B876gk1A.css"
     ]
   },
   "_client.js": {
@@ -90,7 +90,7 @@
     ],
     "css": [
       "_app/immutable/assets/_layout.CjOXX80O.css",
-      "_app/immutable/assets/Footer.5IfJ6qmx.css"
+      "_app/immutable/assets/Footer.B876gk1A.css"
     ]
   },
   "src/routes/+page.svelte": {
@@ -105,7 +105,7 @@
     ],
     "css": [
       "_app/immutable/assets/_page.OiG77YJm.css",
-      "_app/immutable/assets/Footer.5IfJ6qmx.css"
+      "_app/immutable/assets/Footer.B876gk1A.css"
     ]
   },
   "src/routes/green-fox-academy/+page.svelte": {
