--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
     "@simproch-dev/config-eslint": "*",
-    "@simproch-dev/config-tailwind": "*",
+    "@types/node": "^22.7.4",
+    "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
     "turbo": "latest"
@@ -21,5 +21,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "playwright-qase-reporter": "^2.0.15"
+  }
 }
